--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,25 +5,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        tools:context=".RegisterActivity">
-
-    <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="50sp"
-            android:textAlignment="center"
-            android:text="Register"/>
-
-    <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Name"/>
-
-    <EditText
-            android:id="@+id/name"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Name" />
+        tools:context=".LoginActivity">
 
     <TextView
             android:layout_width="wrap_content"
@@ -40,18 +22,6 @@
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Phone"/>
-
-    <EditText
-            android:id="@+id/phone"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="phone"
-            android:hint="phone number"/>
-
-    <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:text="Password"/>
 
     <EditText
@@ -64,7 +34,7 @@
     <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:onClick="next"
-            android:text="Next"/>
+            android:onClick="login"
+            android:text="Login"/>
 
 </LinearLayout>
