--- a/app/src/main/res/layout/activity_food_court_select.xml
+++ b/app/src/main/res/layout/activity_food_court_select.xml
@@ -7,6 +7,13 @@
         android:orientation="vertical"
         tools:context=".FoodCourtSelectActivity">
 
+    <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="40sp"
+            android:textAlignment="center"
+            android:text="Food Courts"/>
+
     <ListView
             android:id="@+id/food_courts"
             android:layout_width="match_parent"
