--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -6,6 +6,13 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         tools:context=".MenuActivity">
+
+    <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="40sp"
+            android:textAlignment="center"
+            android:text="Menu"/>
     
     <ListView
             android:id="@+id/menu_items"
