--- a/app/src/main/res/layout/activity_stall_select.xml
+++ b/app/src/main/res/layout/activity_stall_select.xml
@@ -7,6 +7,13 @@
         android:orientation="vertical"
         tools:context=".StallSelectActivity">
 
+    <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="40sp"
+            android:textAlignment="center"
+            android:text="Stalls"/>
+
     <ListView
             android:id="@+id/stalls"
             android:layout_width="match_parent"
