--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,4 +19,10 @@
             android:onClick="register"
             android:text="Register"/>
 
+    <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Orders"
+            android:onClick="orders"/>
+
 </LinearLayout>
