--- a/app/src/main/res/layout/orders.xml
+++ b/app/src/main/res/layout/orders.xml
@@ -12,13 +12,14 @@
             android:id="@+id/order_no"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_toEndOf="@id/stall_name"/>
+            android:textSize="30sp"
+            android:layout_alignParentRight="true"/>
 
     <TextView
             android:id="@+id/status"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/order_no"/>
+            android:layout_below="@id/stall_name"/>
 
     <LinearLayout
             android:id="@+id/food_items"
@@ -37,7 +38,8 @@
     <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_toRightOf="@id/cancel"
+            android:layout_below="@id/food_items"
+            android:layout_toEndOf="@id/cancel"
             android:text="Received"/>
 
 </RelativeLayout>
