--- a/app/src/main/res/layout/activity_checkout.xml
+++ b/app/src/main/res/layout/activity_checkout.xml
@@ -16,6 +16,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
+    <Spinner
+            android:id="@+id/payment_method"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
     <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
